--- a/.gitignore
+++ b/.gitignore
@@ -67,5 +67,5 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
-*/Debug/*
-*/Relase/*
+**/Debug/**
+**/Release/**
