Reorganized and forrnatted the code

--- a/Sample/ShannonizerSample.dproj
+++ b/Sample/ShannonizerSample.dproj
@@ -300,7 +300,7 @@
             <Form>Form12</Form>
             <FormType>fmx</FormType>
         </DCCReference>
-        <DCCReference Include="..\Source\Shannonizer.pas"/>
+        <DCCReference Include="..\Shannonizer.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
